--- a/multiple_linear_regression.ipynb
+++ b/multiple_linear_regression.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11,6 +12,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/andreibucur1/startup-profit-prediction/blob/main/multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -63,23 +74,6 @@
       },
       "execution_count": 31,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(X)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_63pkPnyTmit",
-        "outputId": "d81bf146-50d9-44ea-e32e-64335aa4de69"
-      },
-      "execution_count": 30,
-      
-        }
-      ]
     },
     {
       "cell_type": "markdown",
