--- a/multiple_linear_regression.ipynb
+++ b/multiple_linear_regression.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,16 +11,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/andreibucur1/startup-profit-prediction/blob/main/multiple_linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -74,6 +63,79 @@
       },
       "execution_count": 31,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0OMilYDuWbm3",
+        "outputId": "c14cf874-b29a-4dc7-84df-5eb099e31368"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    R&D Spend  Administration  Marketing Spend       State\n",
+            "0   165349.20       136897.80        471784.10    New York\n",
+            "1   162597.70       151377.59        443898.53  California\n",
+            "2   153441.51       101145.55        407934.54     Florida\n",
+            "3   144372.41       118671.85        383199.62    New York\n",
+            "4   142107.34        91391.77        366168.42     Florida\n",
+            "5   131876.90        99814.71        362861.36    New York\n",
+            "6   134615.46       147198.87        127716.82  California\n",
+            "7   130298.13       145530.06        323876.68     Florida\n",
+            "8   120542.52       148718.95        311613.29    New York\n",
+            "9   123334.88       108679.17        304981.62  California\n",
+            "10  101913.08       110594.11        229160.95     Florida\n",
+            "11  100671.96        91790.61        249744.55  California\n",
+            "12   93863.75       127320.38        249839.44     Florida\n",
+            "13   91992.39       135495.07        252664.93  California\n",
+            "14  119943.24       156547.42        256512.92     Florida\n",
+            "15  114523.61       122616.84        261776.23    New York\n",
+            "16   78013.11       121597.55        264346.06  California\n",
+            "17   94657.16       145077.58        282574.31    New York\n",
+            "18   91749.16       114175.79        294919.57     Florida\n",
+            "19   86419.70       153514.11             0.00    New York\n",
+            "20   76253.86       113867.30        298664.47  California\n",
+            "21   78389.47       153773.43        299737.29    New York\n",
+            "22   73994.56       122782.75        303319.26     Florida\n",
+            "23   67532.53       105751.03        304768.73     Florida\n",
+            "24   77044.01        99281.34        140574.81    New York\n",
+            "25   64664.71       139553.16        137962.62  California\n",
+            "26   75328.87       144135.98        134050.07     Florida\n",
+            "27   72107.60       127864.55        353183.81    New York\n",
+            "28   66051.52       182645.56        118148.20     Florida\n",
+            "29   65605.48       153032.06        107138.38    New York\n",
+            "30   61994.48       115641.28         91131.24     Florida\n",
+            "31   61136.38       152701.92         88218.23    New York\n",
+            "32   63408.86       129219.61         46085.25  California\n",
+            "33   55493.95       103057.49        214634.81     Florida\n",
+            "34   46426.07       157693.92        210797.67  California\n",
+            "35   46014.02        85047.44        205517.64    New York\n",
+            "36   28663.76       127056.21        201126.82     Florida\n",
+            "37   44069.95        51283.14        197029.42  California\n",
+            "38   20229.59        65947.93        185265.10    New York\n",
+            "39   38558.51        82982.09        174999.30  California\n",
+            "40   28754.33       118546.05        172795.67  California\n",
+            "41   27892.92        84710.77        164470.71     Florida\n",
+            "42   23640.93        96189.63        148001.11  California\n",
+            "43   15505.73       127382.30         35534.17    New York\n",
+            "44   22177.74       154806.14         28334.72  California\n",
+            "45    1000.23       124153.04          1903.93    New York\n",
+            "46    1315.46       115816.21        297114.46     Florida\n",
+            "47       0.00       135426.92             0.00  California\n",
+            "48     542.05        51743.15             0.00    New York\n",
+            "49       0.00       116983.80         45173.06  California\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
